fix double loading demo