@@ -4,8 +4,6 @@ import java.lang.instrument.Instrumentation;
 import java.lang.management.ManagementFactory;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import javax.management.MBeanServer;
 import javax.management.ObjectName;
@@ -14,7 +12,11 @@ import com.blogspot.mikelaud.je.agent.beans.Types;
 
 public class Main implements Runnable {
 
-	private final Instrumentation INSTRUMENTATION;
+	static {
+		System.out.println(">>>>>>>>> Init Main.");
+	}
+
+	private Instrumentation INSTRUMENTATION;
 
 	private void registerMxBean() throws Exception {
 		String id = "id_" + System.currentTimeMillis();
@@ -42,25 +44,29 @@ public class Main implements Runnable {
 		System.out.println("[agent] main: end.");
 	}
 
-	public Main(Instrumentation aInstrumentation) {
-		INSTRUMENTATION = aInstrumentation;
+	public Main() {
+		INSTRUMENTATION = null;
 	}
 
+	public void set(Instrumentation aInstrumentation) {
+		INSTRUMENTATION = aInstrumentation;
+	}
+	
 	public static void agentmain(String aArgs, Instrumentation aInstrumentation) {
 		try {
 			System.out.println("[agent] >>> load begin");
+			System.out.println("[agent] arg: " + aArgs);
 			//
-			Path userHome = Paths.get(System.getProperty("user.home"));
-			Path agentPath = userHome.resolve(".m2/repository/com/blogspot/mikelaud/je/je-agent/1.0.0/je-agent-1.0.0-jar-with-dependencies.jar");
-			URL agentUrl = agentPath.toUri().toURL();
-			//
-			ClassLoader oldClassLoader = Thread.currentThread().getContextClassLoader();
-			ClassLoader newClassLoader = URLClassLoader.newInstance(new URL[] { agentUrl }, oldClassLoader);
+			URL agentUrl = new URL(aArgs);
+			ClassLoader newClassLoader = URLClassLoader.newInstance(new URL[] { agentUrl }, null);
 			Thread.currentThread().setContextClassLoader(newClassLoader);
 			//
 			System.out.println("[agent] classloader: " + Thread.currentThread().getContextClassLoader());
-			new Main(aInstrumentation).run();
-			System.out.println("[agent] <<< load end");
+			//Main m = new Main(aInstrumentation);
+			Main m = (Main)newClassLoader.loadClass("com.blogspot.mikelaud.je.agent.Main").newInstance();
+			m.set(aInstrumentation);
+			m.run();
+			System.out.println("[agent] <<< load end: " + m);
 		}
 		catch (Exception e) {
 			e.printStackTrace();
